# mc_visits

./: .pre-commit-config.yaml  Dockerfile  Dockerfile_worker  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  worker-entrypoint.sh
.github/workflows/: mc-api-gateway-ci.yml  mc-visits-ci.yml
src/: .env.dist  .env.example  manage.py  requirements.txt
src/core/: asgi.py  celery.py  env.py  settings.py  urls.py  wsgi.py
src/doctor_availabilities/: admin.py  apps.py  factory_models.py  models.py  serializers.py  tests.py  urls.py  views.py
src/doctor_availabilities/migrations/: 0001_initial.py  0002_doctoravailability_price.py  0003_alter_doctoravailability_doctor_id.py  0004_alter_doctoravailability_doctor_id_and_more.py
src/visits/: admin.py  factory_models.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
src/visits/migrations/: 0001_initial.py  0002_alter_visit_managers_visit_is_deleted.py  0003_visit_is_paid.py
