[tool.poetry]
name = "MC Visists"
version = "0.1.0"
description = ""
authors = ["MICHAŁ"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
bandit = "^1.8.0"
celery = "5.4.0"
coverage = "7.6.1"
django = "5.1"
django-celery-beat = "2.7.0"
django-environ = "0.11.2"
django-extensions = "3.2.3"
django-factory-boy = "1.0.0"
django-timezone-field = "7.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
docker = "7.1.0"
factory-boy = "3.3.1"
psycopg2-binary = "^2.9.10"
python = "^3.12"
redis = "^5.2.1"
requests = "2.32.3"
ruff = "^0.9.1"
safety = "^3.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
